# TrailCurrentBorealis

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
CAD/: BodyBorealisCaseBottomV2.stl  BodyBorealisCaseCoverV1.stl  BodyBorealisCaseCoverV2.stl  BodyBorealisCaseCoverV3.stl  TrailCurrentBorealisCase.3mf  TrailCurrentBorealisCase.FCStd  TrailCurrentBorealisPcbForMilling.20260311-193122.FCBak  TrailCurrentBorealisPcbForMilling.20260317-120305.FCBak  TrailCurrentBorealisPcbForMilling.FCStd
CAD/CNC/: BorealisMilling-TC__0_6mm_Drill.nc  BorealisMilling-TC__1mm_Drill001-1.nc  BorealisMilling-TC__2_5mm_Drillbit001-2.nc  BorealisMilling-TC__SpeTool_O_Flute_1_4_001-3.nc  MillAndDrillPcb-TC__1mm_Drill-1.nc  MillAndDrillPcb-TC__2_5mm_Drillbit-2.nc  MillAndDrillPcb-TC__SpeTool_O_Flute_1_4_.nc
DOCS/: arrival-todos.md  sensor-wiring.md
EDA/Fabrication/: TrailCurrentBorealis-B_Cu.gbr  TrailCurrentBorealis-B_Mask.gbr  TrailCurrentBorealis-B_Paste.gbr  TrailCurrentBorealis-B_Silkscreen.gbr  TrailCurrentBorealis-Edge_Cuts.gbr  TrailCurrentBorealis-F_Cu.gbr  TrailCurrentBorealis-F_Mask.gbr  TrailCurrentBorealis-F_Paste.gbr  TrailCurrentBorealis-F_Silkscreen.gbr  TrailCurrentBorealis-NPTH.drl  TrailCurrentBorealis-PTH.drl  TrailCurrentBorealis-job.gbrjob
EDA/TrailCurrentBorealis/: TrailCurrentBorealis.kicad_pcb  TrailCurrentBorealis.kicad_prl  TrailCurrentBorealis.kicad_pro  TrailCurrentBorealis.kicad_sch  fp-info-cache  (+1 more)
main/: CMakeLists.txt  discovery.c  discovery.h  idf_component.yml  main.c  ota.c  ota.h  sensors.c  sensors.h
src/: main.cpp
